Changes in 0.5.1

* ZMK now defines `ZMK.BugFixes` as a set of identifiers of issues that were
  known and addressed inside the library. Specific bugs may gain stable identifiers
  that, once addressed, are added to the list in the next release of the library.

  This mechanism is intended to enable hot-fixes, which are applied to the
  makefile of a specific project, which update or replace part of zmk to fix a
  specific issue while doing so in a way which eventually disables the
  workaround.

* The Symlink template is now documented with a dedicated manual page

* The Symlink template no longer retains the sub-directory related to the
  placement in the development tree after installation, matching the behavior
  of the Program template.

  This is a backwards incompatible change resulting from the fact that
  previous behavior was simply wrong. There are additional tests checking
  various combinations of this behavior now.

  This issue is identified in ZMK.BugFixes as zmk-issue-80

* ZMK integration tests no longer fail on Haiku

Changes in 0.5:

* The Program.Test template no longer fails with syntax error when computing
  test coverage.

* The Toolchain module no longer misidentifies clang on FreeBSD.

* The Toolchain module has initial integration test suite that checks the real
  interaction with the host system. The integration test suite has reference
  data for FreeBSD and MacOS.

* The Coverity module gained support for checking if scan result is viable for
  submission and an ability to submit the scan automatically, using the new
  `upload-coverity-scan` target. See the manual page for additional information
  about project configuration.

* ZMK now supports additional static analysis tools: clang-tidy, clang-analyzer
  (via scan-build), cppcheck and sparse. They each define a CamelCase-named
  module and a Sources attribute which includes the set of files to scan.

* The distclean no longer forgets to run clean target.
